--- a/.gitignore
+++ b/.gitignore
@@ -1,89 +1,80 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
+# OS
+.DS_Store
+
 *.py[cod]
-*$py.class
+*.sw[op]
 
-# C extensions
+# C extensions and Cython
 *.so
+cythonize.dat
 
-# Distribution / packaging
-.Python
-env/
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-*.egg-info/
-.installed.cfg
+# Packages
 *.egg
-
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
+*.egg-info
+dist
+build
+eggs
+parts
+bin
+var
+sdist
+develop-eggs
+.installed.cfg
+lib
+lib64
+__pycache__
+.cache/
 
 # Installer logs
 pip-log.txt
-pip-delete-this-directory.txt
 
 # Unit test / coverage reports
-htmlcov/
-.tox/
 .coverage
-.coverage.*
-.cache
+.tox
 nosetests.xml
+
+.ropeproject/
+.noseids
+cover/
 coverage.xml
-*,cover
-.hypothesis/
+*~
 
 # Translations
 *.mo
-*.pot
 
-# Django stuff:
-*.log
-local_settings.py
+# Mr Developer
+.mr.developer.cfg
+.project
+.pydevproject
 
-# Flask stuff:
-instance/
-.webassets-cache
+# IntelliJ/PyCharm files
+.idea/
 
-# Scrapy stuff:
-.scrapy
+# Eclipse
+.settings/
 
-# Sphinx documentation
+# Virtualenv
+env/
+
+# Domino
+.domino/
+results/
+domino.log
+
+# Misc
+study*/exp-*
+data/
+tmp/
+out/
+tests/out/
+
+# Domino
+.domino/
+results/
+.noLock
+
+# ignore Sphinx build dir
 docs/_build/
 
-# PyBuilder
-target/
-
-# IPython Notebook
-.ipynb_checkpoints
-
-# pyenv
-.python-version
-
-# celery beat schedule file
-celerybeat-schedule
-
-# dotenv
-.env
-
-# virtualenv
-venv/
-ENV/
-
-# Spyder project settings
-.spyderproject
-
-# Rope project settings
-.ropeproject
+# debug symbols
+*.dSYM/
